samples/_failures_safe/1761725272_e8d9bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53ea0196.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_53ea0196.c:163:16: error: missing terminating " character
  163 |         printf("Found string:
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_53ea0196.c:163:9: error: expected expression at end of input
  163 |         printf("Found string:
      |         ^~~~~~
./samples/SAFE/__tmp_53ea0196.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53ea0196.c:163:9: error: expected declaration or statement at end of input
